@@ -1,1 +1,10 @@
-function a();
+var a;
+if ((a = 0) == 0) {
+    println(a);
+}
+
+function f() {
+    return a;
+}
+
+println(f());
